# firefly_grpc

./: CMakeLists.txt  Dockerfile  README.md  build.sh  devel_env-file
common/: dbaccess.cpp  dbaccess.h  logger.h  logger_syslog.cpp  logger_syslog.h  service.h  utils.cpp  utils.h
db/: CMakeLists.txt  Dockerfile  build_db.sh  create_db_client_cert.sh  db.sql  db.sql.in
ext/gtest/: CMakeLists.txt
keys/: create_certs.sh  create_certs.sh.in
server/: CMakeLists.txt  client.cpp  client.h  main.cpp  myservice.proto  server.cpp  server.h
test/: CMakeLists.txt  test_client.cpp  test_db.cpp  utils.cpp  utils.h
